use new Java syntax